--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
 }
 
@@ -7,7 +7,6 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "ir.miare.formframework"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -36,7 +35,11 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // [Android View Animations](https://github.com/daimajia/AndroidViewAnimations)
+    implementation 'com.daimajia.easing:library:2.4@aar'
+    implementation 'com.daimajia.androidanimations:library:2.4@aar'
+
+    // [Timber](https://github.com/JakeWharton/timber)
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 }
